[gd_scene load_steps=12 format=3 uid="uid://bhgbx8ii83l8i"]

[ext_resource type="Script" uid="uid://bkn54eobfiiov" path="res://Interface/hud.gd" id="1_jq685"]
[ext_resource type="PackedScene" uid="uid://bfofgjiphllqj" path="res://Interface/time_control_ui.tscn" id="2_1uf33"]
[ext_resource type="Script" uid="uid://docnlypjp8sy1" path="res://Managers/status_manager.gd" id="2_4i735"]
[ext_resource type="Script" uid="uid://ciaaelgrld3wn" path="res://Interface/test_actions_ui.gd" id="3_28tah"]
[ext_resource type="Script" uid="uid://dbt5541uxfnie" path="res://Managers/time_manager.gd" id="4_mb2mj"]
[ext_resource type="Script" uid="uid://2b15yf3g73t5" path="res://Interface/day_transition.gd" id="5_jsbdt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1uf33"]

[sub_resource type="Animation" id="Animation_jsbdt"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333336, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4i735"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yux2m"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333336, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4i735"]
_data = {
&"RESET": SubResource("Animation_4i735"),
&"fade_in": SubResource("Animation_jsbdt"),
&"fade_out": SubResource("Animation_yux2m")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jq685")

[node name="StatusManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_4i735")

[node name="StatusCheckTimer" type="Timer" parent="StatusManager"]
unique_name_in_owner = true
autostart = true

[node name="TimeControlUI" parent="." instance=ExtResource("2_1uf33")]
layout_mode = 1
offset_bottom = 218.0

[node name="StatusUI" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 16.0
offset_right = 257.0
offset_bottom = 149.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1uf33")

[node name="VBoxContainer" type="VBoxContainer" parent="StatusUI"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="StatusUI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99999994, 0.10443371, 0.056671128, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.84705883)
text = "HP"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="StatusUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 24)
layout_mode = 2
size_flags_horizontal = 4
show_percentage = false

[node name="HPValue" type="Label" parent="StatusUI/VBoxContainer/HPBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "10/10"
horizontal_alignment = 1

[node name="EnergyLabel" type="Label" parent="StatusUI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.78260213, 0.44826764, 0.029553052, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.84705883)
text = "ENERGY"
horizontal_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="StatusUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 24)
layout_mode = 2
size_flags_horizontal = 4
show_percentage = false

[node name="EnergyValue" type="Label" parent="StatusUI/VBoxContainer/EnergyBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "10/10"
horizontal_alignment = 1

[node name="HungerUI" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -263.0
offset_top = 21.0
offset_right = 20.0
offset_bottom = 98.0
grow_horizontal = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HungerUI"]
layout_mode = 2

[node name="HungerLabel" type="Label" parent="HungerUI/VBoxContainer"]
layout_mode = 2
text = "Hunger (semi-hidden stat)"
horizontal_alignment = 1

[node name="HungerBar" type="ProgressBar" parent="HungerUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HungerValue" type="Label" parent="HungerUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TestActionsUI" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -376.0
offset_right = 120.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_28tah")

[node name="TestButtonsContainer" type="VBoxContainer" parent="TestActionsUI"]
layout_mode = 2

[node name="EatSomething" type="Button" parent="TestActionsUI/TestButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Eat Something"
autowrap_mode = 3

[node name="TakeDmg" type="Button" parent="TestActionsUI/TestButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Take Dmg"
autowrap_mode = 3

[node name="HoldToWork" type="Button" parent="TestActionsUI/TestButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HOLD to Work"
autowrap_mode = 3

[node name="TimeManager" type="Node" parent="."]
script = ExtResource("4_mb2mj")

[node name="Timer" type="Timer" parent="TimeManager"]
autostart = true

[node name="DayTransition" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_jsbdt")

[node name="NewDayPanel" type="PanelContainer" parent="DayTransition"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = -151.5
offset_right = 237.5
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DayTransition/NewDayPanel"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="NewDayLabel" type="Label" parent="DayTransition/NewDayPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="StartNewDayButton" type="Button" parent="DayTransition/NewDayPanel/VBoxContainer"]
layout_mode = 2
text = "Start New Day"

[node name="NewDayFade" type="AnimationPlayer" parent="DayTransition/NewDayPanel"]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_4i735")
}

[connection signal="timeout" from="StatusManager/StatusCheckTimer" to="StatusManager" method="_on_status_check_timer_timeout"]
[connection signal="pressed" from="TestActionsUI/TestButtonsContainer/EatSomething" to="TestActionsUI" method="_on_eat_something_pressed"]
[connection signal="pressed" from="TestActionsUI/TestButtonsContainer/TakeDmg" to="TestActionsUI" method="_on_take_dmg_pressed"]
[connection signal="button_down" from="TestActionsUI/TestButtonsContainer/HoldToWork" to="TestActionsUI" method="_on_hold_to_work_button_down"]
[connection signal="button_up" from="TestActionsUI/TestButtonsContainer/HoldToWork" to="TestActionsUI" method="_on_hold_to_work_button_up"]
[connection signal="timeout" from="TimeManager/Timer" to="TimeManager" method="_on_timer_timeout"]
[connection signal="pressed" from="DayTransition/NewDayPanel/VBoxContainer/StartNewDayButton" to="DayTransition" method="_on_start_new_day_button_pressed"]
[connection signal="animation_finished" from="DayTransition/NewDayPanel/NewDayFade" to="DayTransition" method="_on_new_day_fade_animation_finished"]
